Issue #863: Adjust case study content for readability on large screens

--- a/assets/styles/scss/components/_work.scss
+++ b/assets/styles/scss/components/_work.scss
@@ -91,6 +91,7 @@
 
   p {
     font-size: 1.2em;
+    margin-bottom: 0;
   }
 
   .case-study__client {
@@ -99,7 +100,8 @@
     @include align-items(center);
     @include flex-wrap(wrap);
 
-    padding: $base-spacing * 2 $base-spacing $base-spacing;
+    background-color: lighten($light-gray, 10);
+    padding: $base-margin $base-spacing;
 
     @include media($medium-screen-up) {
       @include flex-wrap(nowrap);
@@ -121,6 +123,8 @@
     @include media($medium-screen-up) {
       @include display(flex);
       @include align-items(center);
+
+      padding: 0;
     }
 
     .case-study__content__text,
@@ -132,13 +136,15 @@
 
     .case-study__square-image {
       img {
+        display: block;
         height: auto;
       }
     }
 
     .case-study__content__text {
       h2 {
-        color: $base-background-color;
+        //background-color: lighten($light-gray, 10);
+        //color: $base-background-color;
         display: inline-block;
         font-size: 1.8em;
         padding: .75em 3em .75em 1em;
@@ -155,7 +161,7 @@
 
     &.case-study__content--objective {
       h2 {
-        background-color: $fuschia;
+        color: $fuschia;
       }
     }
 
@@ -166,7 +172,7 @@
         text-align: right;
 
         h2 {
-          background-color: $dark-blue;
+          color: $dark-blue;
           padding-left: 3em;
           padding-right: 1em;
         }
@@ -176,7 +182,7 @@
 
     &.case-study__content--results {
       h2 {
-        background-color: $teal;
+        color: $teal;
       }
     }
   }
@@ -190,7 +196,7 @@
 
   .case-study__client-quote {
     background-color: lighten($light-gray, 10);
-    margin: $base-spacing 0 $base-spacing * 2;
+    margin-bottom: $base-spacing * 2;
     padding: $base-spacing;
 
     @include media($medium-screen-up) {
